Bug 17170 - Regression for GDB global --statistics
Summary: Regression for GDB global --statistics
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: gdb (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 7.8
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-17 09:37 UTC by dje
Modified: 2014-07-17 12:04 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dje 2014-07-17 09:37:54 UTC
This bug is to log the regression reported here:

https://sourceware.org/ml/gdb-patches/2014-06/msg00965.html
Comment 1 Sourceware Commits 2014-07-17 09:44:14 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "gdb and binutils".

The branch, master has been updated
       via  74b49205e07fcba1273df4c4bed6ec40951cee03 (commit)
      from  b8b8facf90dda8363c989c263715d46125b2c301 (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=74b49205e07fcba1273df4c4bed6ec40951cee03

commit 74b49205e07fcba1273df4c4bed6ec40951cee03
Author: Doug Evans <dje@google.com>
Date:   Thu Jul 17 02:42:55 2014 -0700

    Add reference to PR 17170 to previous entry.

-----------------------------------------------------------------------

Summary of changes:
 gdb/ChangeLog           |    1 +
 gdb/testsuite/ChangeLog |    1 +
 2 files changed, 2 insertions(+), 0 deletions(-)
Comment 3 dje 2014-07-17 09:48:33 UTC
Keeping this bug open as there is a testcase still to be checked in.

https://sourceware.org/ml/gdb-patches/2014-07/msg00303.html
Comment 4 Sourceware Commits 2014-07-17 10:30:57 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "gdb and binutils".

The branch, gdb-7.8-branch has been updated
       via  f08c8885f2290296ce82f8f02cd5cbce10312fa9 (commit)
      from  33b990063a482008515f437cda3f29ebef584079 (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=f08c8885f2290296ce82f8f02cd5cbce10312fa9

commit f08c8885f2290296ce82f8f02cd5cbce10312fa9
Author: Doug Evans <dje@google.com>
Date:   Thu Jul 17 03:28:10 2014 -0700

    Fix PR gdb/17170.
    
    	* maint.c (count_symtabs_and_blocks): Handle NULL
    	current_program_space.
    	(report_command_stats): Check global enabled flag in addition to
    	recorded enabled flag.
    	(make_command_stats_cleanup): Handle msg_type == 0, startup.
    
    	testsuite/
    	* gdb.base/maint.exp: Update testing of per-command stats.

-----------------------------------------------------------------------

Summary of changes:
 gdb/ChangeLog                    |    9 +++++++++
 gdb/maint.c                      |   38 +++++++++++++++++++++++++-------------
 gdb/testsuite/ChangeLog          |    5 +++++
 gdb/testsuite/gdb.base/maint.exp |    5 +++--
 4 files changed, 42 insertions(+), 15 deletions(-)
Comment 5 Sourceware Commits 2014-07-17 11:57:59 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "gdb and binutils".

The branch, master has been updated
       via  17d0c5c8f07d43142bb35157a0df720b17b8a5ed (commit)
      from  74b49205e07fcba1273df4c4bed6ec40951cee03 (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=17d0c5c8f07d43142bb35157a0df720b17b8a5ed

commit 17d0c5c8f07d43142bb35157a0df720b17b8a5ed
Author: Jan Kratochvil <jan.kratochvil@redhat.com>
Date:   Thu Jul 17 13:56:24 2014 +0200

    PR 17170 - testcase for GDB global --statistics regression.
    
    gdb/testsuite/
    2014-07-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
    
    	PR gdb/17170
    	* gdb.base/statistics.exp: New file.
    
    Message-ID: <20140712174217.GA1478@host2.jankratochvil.net>

-----------------------------------------------------------------------

Summary of changes:
 gdb/testsuite/ChangeLog |    5 +++++
 1 files changed, 5 insertions(+), 0 deletions(-)
Comment 6 Sourceware Commits 2014-07-17 12:00:13 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "gdb and binutils".

The branch, master has been updated
       via  e6cf2ae8bb4c675ebfafb137bf13e92ba96225e8 (commit)
      from  17d0c5c8f07d43142bb35157a0df720b17b8a5ed (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=e6cf2ae8bb4c675ebfafb137bf13e92ba96225e8

commit e6cf2ae8bb4c675ebfafb137bf13e92ba96225e8
Author: Jan Kratochvil <jan.kratochvil@redhat.com>
Date:   Thu Jul 17 13:59:03 2014 +0200

    PR 17170 - testcase for GDB global --statistics regression - fix up.
    
    Add missing file to previous entry.

-----------------------------------------------------------------------

Summary of changes:
 .../rerun-prec.exp => gdb.base/statistics.exp}     |   28 ++++++++------------
 1 files changed, 11 insertions(+), 17 deletions(-)
 copy gdb/testsuite/{gdb.reverse/rerun-prec.exp => gdb.base/statistics.exp} (61%)
Comment 7 Sourceware Commits 2014-07-17 12:02:04 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "gdb and binutils".

The branch, gdb-7.8-branch has been updated
       via  b4f0a5e936f3fa7912762f3bd0ed2df0fea1888a (commit)
      from  f08c8885f2290296ce82f8f02cd5cbce10312fa9 (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=b4f0a5e936f3fa7912762f3bd0ed2df0fea1888a

commit b4f0a5e936f3fa7912762f3bd0ed2df0fea1888a
Author: Jan Kratochvil <jan.kratochvil@redhat.com>
Date:   Thu Jul 17 13:56:24 2014 +0200

    PR 17170 - testcase for GDB global --statistics regression.
    
    gdb/testsuite/
    2014-07-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
    
    	PR gdb/17170
    	* gdb.base/statistics.exp: New file.
    
    Message-ID: <20140712174217.GA1478@host2.jankratochvil.net>

-----------------------------------------------------------------------

Summary of changes:
 gdb/testsuite/ChangeLog                            |    5 +++
 .../rerun-prec.exp => gdb.base/statistics.exp}     |   28 ++++++++------------
 2 files changed, 16 insertions(+), 17 deletions(-)
 copy gdb/testsuite/{gdb.reverse/rerun-prec.exp => gdb.base/statistics.exp} (61%)
Comment 8 Jan Kratochvil 2014-07-17 12:04:46 UTC
Testcase is also checked in now.